--- a/modules/buildmaster/templates/run_command_runner.sh.erb
+++ b/modules/buildmaster/templates/run_command_runner.sh.erb
@@ -2,7 +2,7 @@
 cd <%=queue_venv%>
 (
 trap "rm -f command_runner.pid" EXIT
-bin/python tools/buildbot-helpers/command_runner.py -q /dev/shm/queue/commands -r 5 -t 60 -m 60 2>&1 command_runner.log
+bin/python tools/buildbot-helpers/command_runner.py -q /dev/shm/queue/commands -r 5 -t 60 -m 60 > command_runner.log 2>&1
 echo $! > command_runner.pid
 wait
 ) &
