--- a/modules/buildmaster/templates/run_command_runner.sh.erb
+++ b/modules/buildmaster/templates/run_command_runner.sh.erb
@@ -1,4 +1,6 @@
 #!/bin/bash
+####  This file under configuration management control
+####  DO NOT EDIT MANUALLY
 cd <%=queue_venv%>
 (
 trap "rm -f command_runner.pid" EXIT
