--- a/modules/buildmaster/templates/run_command_runner.sh.erb
+++ b/modules/buildmaster/templates/run_command_runner.sh.erb
@@ -1,7 +1,7 @@
 #!/bin/bash
 ####  This file under configuration management control
 ####  DO NOT EDIT MANUALLY
-cd <%=queue_venv%>
+cd <%=master_queue_venv%>
 (
 trap "rm -f command_runner.pid" EXIT
 bin/python tools/buildbot-helpers/command_runner.py -q /dev/shm/queue/commands -r 5 -t 60 -m 60 >> command_runner.log 2>&1 &
