--- a/modules/buildmaster/templates/run_pulse_publisher.sh.erb
+++ b/modules/buildmaster/templates/run_pulse_publisher.sh.erb
@@ -4,7 +4,7 @@
 cd <%=master_queue_venv%>
 (
 trap "rm -f pulse_publisher.pid" EXIT
-bin/python tools/buildbot-helpers/pulse_publisher.py -q /dev/shm/queue/pulse >> pulse_publisher.log 2>&1 &
+bin/python tools/buildbot-helpers/pulse_publisher.py -p passwords.py -q /dev/shm/queue/pulse >> pulse_publisher.log 2>&1 &
 echo $! > pulse_publisher.pid
 wait
 ) &
