--- a/modules/sendmail/templates/sendmail.mc.erb
+++ b/modules/sendmail/templates/sendmail.mc.erb
@@ -1,3 +1,5 @@
+dnl ####  This file under configuration management control
+dnl ####  DO NOT EDIT MANUALLY
 divert(-1)dnl
 dnl #
 dnl # This is the sendmail macro config file for m4. If you make changes to
