--- a/modules/buildapi/templates/buildapi-nginx.conf.erb
+++ b/modules/buildapi/templates/buildapi-nginx.conf.erb
@@ -2,8 +2,8 @@ server {
     listen 80; ## ipv4
     listen [::]:80; ## ipv6
 
-    server_name <%= fqdn %>
-    root /var/www/<%= title %>
+    server_name <%= fqdn %>;
+    root /var/www/<%= title %>;
 
     location / {
         proxy_pass http://localhost:<%= scope::lookupvar('buildapi::settings::port') %>;
