fix template, deps

--- a/modules/buildapi/templates/production.ini.erb
+++ b/modules/buildapi/templates/production.ini.erb
@@ -32,8 +32,8 @@ beaker.session.secret = <%=scope.lookupvar('secrets::buildapi_session_secret')%>
 allowed_origins = https://tbpl.mozilla.org http://tbpl.mozilla.org http://tbpl.allizom.org http://tests.themasta.com http://dev.philringnalda.com http://bbpl.dbaron.org http://tbpl.mcc.id.au http://ehsanakhgari.org http://tbpl.swatinem.de
 
 # SQLAlchemy database URL and connection settings
-sqlalchemy.scheduler_db.url = mysql://<%=scope.lookupvar('secrets::buildapi_schedulerdb_user')%>:<%=scope.lookupvar('secrets::buildapi_schedulerdb_password')@<%=scope.lookupvar('secrets::buildapi_schedulerdb_host')%>/<%=scope.lookupvar('secrets::buildapi_schedulerdb_database')%>
-sqlalchemy.status_db.url = mysql://<%=scope.lookupvar('secrets::buildapi_statusdb_user')%>:<%=scope.lookupvar('secrets::buildapi_statusdb_password')@<%=scope.lookupvar('secrets::buildapi_statusdb_host')%>/<%=scope.lookupvar('secrets::buildapi_statusdb_database')%>
+sqlalchemy.scheduler_db.url = mysql://<%=scope.lookupvar('secrets::buildapi_schedulerdb_user')%>:<%=scope.lookupvar('secrets::buildapi_schedulerdb_password')%>@<%=scope.lookupvar('secrets::buildapi_schedulerdb_host')%>/<%=scope.lookupvar('secrets::buildapi_schedulerdb_database')%>
+sqlalchemy.status_db.url = mysql://<%=scope.lookupvar('secrets::buildapi_statusdb_user')%>:<%=scope.lookupvar('secrets::buildapi_statusdb_password')%>@<%=scope.lookupvar('secrets::buildapi_statusdb_host')%>/<%=scope.lookupvar('secrets::buildapi_statusdb_database')%>
 sqlalchemy.buildapi_db.url = sqlite:///%(here)s/buildapi.db
 sqlalchemy.scheduler_db.pool_recycle = 60
 sqlalchemy.status_db.pool_recycle = 60
