--- a/modules/service_manager/templates/cronscript.erb
+++ b/modules/service_manager/templates/cronscript.erb
@@ -1,4 +1,5 @@
 #!/bin/sh
+sudo -u <%=user%> <%=updatecmd=>
 <%=updatecmd%> > /dev/null 2>&1
 if [ "$?" == 0 ]; then
     service <%=service%> restart
