--- a/modules/service_manager/templates/cronscript.erb
+++ b/modules/service_manager/templates/cronscript.erb
@@ -1,6 +1,5 @@
 #!/bin/sh
-sudo -u <%=user%> <%=updatecmd=>
-<%=updatecmd%> > /dev/null 2>&1
+sudo -u <%=user%> <%=updatecmd%>
 if [ "$?" == 0 ]; then
     service <%=service%> restart
 fi
