rename things a bit

--- a/modules/service_manager/templates/cronscript.erb
+++ b/modules/service_manager/templates/cronscript.erb
@@ -1,5 +1,5 @@
 #!/bin/sh
 sudo -u <%=user%> <%=updatecmd%>
 if [ "$?" == 0 ]; then
-    service <%=service%> restart
+    /etc/init.d/<%=service%> restart
 fi
