--- a/modules/buildapi/templates/production.ini.erb
+++ b/modules/buildapi/templates/production.ini.erb
@@ -1,8 +1,5 @@
-#
-# buildapi - Pylons production environment configuration
-#
-# The %(here)s variable will be replaced with the parent directory of this file
-#
+####  This file under configuration management control
+####  DO NOT EDIT MANUALLY
 [DEFAULT]
 #debug = true
 # Uncomment and replace with the address which should receive any error reports
