--- a/modules/buildapi/templates/buildapi-nginx.conf.erb
+++ b/modules/buildapi/templates/buildapi-nginx.conf.erb
@@ -8,7 +8,7 @@ server {
     server_name <%= scope::lookupvar('buildapi::settings::vhost') %>;
     root /var/www/<%= title %>;
 
-    location / {
+    location /buildapi {
         proxy_pass http://localhost:<%= scope::lookupvar('buildapi::settings::port') %>;
     }
 }
