--- a/modules/buildapi/templates/buildapi-nginx.conf.erb
+++ b/modules/buildapi/templates/buildapi-nginx.conf.erb
@@ -12,6 +12,10 @@ server {
         autoindex on;
     }
 
+    location /buildhtml {
+        autoindex on;
+    }
+
     location /buildapi {
         proxy_pass http://localhost:<%= scope::lookupvar('buildapi::settings::port') %>;
     }
